--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: SimpleChatOverhaul
-version: 1.1.1
+version: 1.1.2
 main: me.mystc.simplechatoverhaul.SimpleChatOverhaul
 api-version: 1.17
 authors: [mystc]
@@ -14,6 +14,9 @@ commands:
   reply:
     description: reply to the last player you messaged
     aliases: [r]
+  announce:
+    description: sends a message to all players as an announcement/broadcast
+    aliases: [anc, announcement, broadcast, bc, brc, brdc]
 permissions:
   chat.reload:
     description: Allows you to use the reload command
@@ -24,3 +27,6 @@ permissions:
   chat.reply:
     description: Allows you to use the reply command
     default: true
+  chat.announce:
+    description: Allows you to use the announce command
+    default: op
